Opened 14 years ago
Closed 14 years ago
#5124 closed bug (fixed)
Workspace switch via alt+Fx crashes
Reported by: | damoklas | Owned by: | axeld |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #5294, #5627, #5688 | |
Platform: | All |
Description
Swiching desktops by alt+F.. crashing kernel:
http://img693.imageshack.us/img693/1544/haiku34621altfkdl.jpg
Attachments (1)
Change History (11)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
Please attach images instead of linking them.
I've seen the same backtrace a few days ago; there, the window list had obviously been overwritten with some bitmap data.
follow-up: 5 comment:3 by , 14 years ago
Version: | R1/alpha1 → R1/Development |
---|
Is this still reproducible?
comment:4 by , 14 years ago
Summary: | alt+F.. crash kernel → Workspace switch via alt+Fx crashes |
---|
comment:7 by , 14 years ago
Blocking: | 5627 added |
---|
comment:8 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Should be fixed in hrev36165. Please reopen if it occurs again.
comment:9 by , 14 years ago
Blocking: | 5688 added |
---|
comment:10 by , 14 years ago
Blocking: | 5294 added |
---|
Note:
See TracTickets
for help on using tickets.
Actually, that only crashed the app_server, not the kernel, just FYI ; you can tell the difference by whether or not you see gdb or PANIC.