bonefish + axeld: * When moving a window to another workspace (using the mouse or the keyboard),   the fLastWorkspaceFocus array of the old workspace could still point to that   window. * This could also lead to a stale pointer and might have caused crashes in   SetFocusWindow(). This should fix #5124, and its duplicates #5294, and #5688.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36165 a95241bf-73f2-0310-859d-f6bbb57e9c96